<resources>
    <string name="app_name">TumoRanger</string>
    <string name="title_app">Tumoranger</string>
    <string name="title_scan">Scan</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="logout">logout</string>
    <string name="sign_up">Sign Up</string>

    <string name="welcome">"Welcome !"</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="login_failed">"Login failed"</string>

    <string name="analyze">Analyze</string>
    <string name="add_image">Add Image</string>

    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>

    <string name="birthdate">Birthdate</string>
    <string name="birth">Birth</string>
    <string name="patient_name">Patient Name</string>
    <string name="name">Name</string>

    <string name="prediction">Prediction</string>
    <string name="confidence_score">Confidence Score</string>

    <string name="result">Result</string>

    <string name="manage_account">Manage your Google Account</string>
    <string name="language">Language</string>
    <string name="appearance">Appearance</string>
    <string name="system_default">System default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="english">English</string>
    <string name="zimbabwe">Indonesia</string>
    <string name="language_changed">Language changed</string>

    <string name="change_image">change image</string>
    <string name="diagnosis_date">Diagnosis Date</string>
    <string name="network_error_message">Network Error</string>
    <string name="login_failed_message">Login Failed, Wrong Account or Password</string>
    <string name="unknown_error">Unknown Error</string>
</resources>