<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scan.ScanFragment"
    android:padding="16dp">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="56dp"> <!-- Adjust margin to avoid overlap with BottomNavigationView -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/imageContainer"
                android:layout_width="0dp"
                android:layout_height="350dp"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/nameEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/previewImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:minWidth="400dp"
                    android:minHeight="400dp"
                    android:scaleType="centerCrop"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/addImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:elevation="0dp"
                    android:gravity="center_horizontal"
                    android:padding="8dp"
                    android:text="@string/add_image" />

            </LinearLayout>

            <Button
                android:id="@+id/changeImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:elevation="0dp"
                android:text="@string/change_image"
                app:layout_constraintEnd_toEndOf="@+id/imageContainer"
                app:layout_constraintTop_toTopOf="@+id/imageContainer" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@+id/imageContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/birthDateEditText"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/birthDateEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/birth"
                android:inputType="none"
                android:focusable="false"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@+id/nameEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/genderRadioGroup"
                android:layout_marginTop="16dp" />

            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/birthDateEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/analyzeButton"
                android:layout_marginTop="16dp">

                <RadioButton
                    android:id="@+id/maleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:padding="8dp" />

                <RadioButton
                    android:id="@+id/femaleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:padding="8dp"
                    android:layout_marginStart="16dp" />
            </RadioGroup>

            <Button
                android:id="@+id/analyzeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/analyze"
                android:padding="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="32dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>